# action-sudoku

./: ActionSudoku.rc  CMakeLists.txt  SudokuApp.cpp  SudokuApp.h  main.cpp  pch.h
SudokuLib/: Alert.cpp  Alert.h  Background.cpp  Background.h  BackgroundDeclaration.cpp  BackgroundDeclaration.h  CMakeLists.txt  Container.cpp  Container.h  ContainerDeclaration.cpp  ContainerDeclaration.h  Declaration.cpp  Declaration.h  DeclarationVisitor.cpp  DeclarationVisitor.h  Digit.cpp  Digit.h  GetDeclarationVisitor.cpp  GetDeclarationVisitor.h  GetDigitVisitor.cpp  GetDigitVisitor.h  GetItemVisitor.cpp  GetItemVisitor.h  GetNumberDeclaration.cpp  GetNumberDeclaration.h  Given.cpp  Given.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  LevelBeginMessage.cpp  LevelBeginMessage.h  LevelEndMessage.cpp  LevelEndMessage.h  MainFrame.cpp  MainFrame.h  Number.cpp  (+29 more)
Tests/: CMakeLists.txt  DeclarationsTest.cpp  EmptyTest.cpp  ItemTest.cpp  LevelTest.cpp  SpartyTest.cpp  SudokuBoardTest.cpp  VisitorTest.cpp
resources/levels/: level3.xml
